--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="./images/png/icon-1.png" alt="">
                 <div class="lorem-box">
                     <h4>Lorem ipsum dolor sit amet</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod ut.</p>
                 </div>
             </div>
         </div>
@@ -71,19 +71,118 @@
                 <img src="./images/png/icon-2.png" alt="">
                 <div class="lorem-box">
                     <h4>Lorem ipsum dolor sit amet</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod ut.</p>
                 </div>
             </div>
             <div class="lorem-card">
                 <img src="./images/png/icon-3.png" alt="">
                 <div class="lorem-box">
                     <h4>Lorem ipsum dolor sit amet</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod ut.</p>
                 </div>
             </div>
         </div>
     </div>
-    <hr class="hr">
+    <div class="div-box">
+        <h2>Выполненные работы</h2>
+        <p>Мы собрали информацию по грузам, которые мы уже доставили. <br> У нас специальный подход к каждому виду товаров.
+        </p>
+        <div class="div-box-1">
+            <div class="div-list">
+                <img src="./images/png/div-img.png" alt="">
+                <h3>Станки и оборудование</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod ut.</p>
+                <a href="#">20 000 руб.</a>
+            </div>
+            <div class="div-list">
+                <img src="./images/png/div-img-1.png" alt="">
+                <h3>Компоненты и запчасти</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod ut.</p>
+                <a href="#">18 000 руб.</a>
+            </div>
+            <div class="div-list">
+                <img src="./images/png/div-img-2.png" alt="">
+                <h3>Станки и оборудование</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod ut.</p>
+                <a href="#">20 000 руб.</a>
+            </div>
+        </div>
     </div>
+    <div class="paper">
+        <h3>Привлеченные <br> клиенты</h3>
+        <img src="./images/png/paper.png" alt="">
+    </div>
+    <div class="info">
+        <h3>Этапы поставки </h3>
+        <div class="info-list">
+            <img src="./images/png/info.png" alt="">
+            <div class="info-list-item">
+                <h4>Предложение от продавца</h4>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in. </p>
+            </div>
+        </div>
+        <div class="info-list">
+            <img src="./images/png/info-1.png" alt="">
+            <div class="info-list-item">
+                <h4>Доставка</h4>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in. </p>
+            </div>
+        </div>
+        <div class="info-list">
+            <img src="./images/png/info-2.png" alt="">
+            <div class="info-list-item">
+                <h4>Установка у клиента</h4>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in. </p>
+            </div>
+        </div>
+    </div>
+    <section class="companies">
+        <div class="card">
+            <img src="./images/png/1.png" alt="">
+            <h3>Росатом</h3>
+            <p>Корпорация атомной энергии</p>
+        </div>
+        <div class="card">
+            <img src="./images/png/2.png" alt="">
+            <h3>Газпром</h3>
+            <p>Энергетическая компания</p>
+        </div>
+        <div class="card">
+            <img src="./images/png/3.png" alt="">
+            <h3>Роснефть</h3>
+            <p>Нефтегазовая компания</p>
+        </div>
+        <div class="card">
+            <img src="./images/png/4.png" alt="">
+            <h3>Роскосмос</h3>
+            <p>Корпорация в космической отрасли</p>
+        </div>
+        <div class="card">
+            <img src="./images/png/5.png" alt="">
+            <h3>Лукойл</h3>
+            <p>Нефтяная компания</p>
+        </div>
+        <div class="card">
+            <img src="./images/png/6.png" alt="">
+            <h3>Интер РАО</h3>
+            <p>Энергетическая компания</p>
+        </div>
+        <div class="card">
+            <img src="./images/png/7.png" alt="">
+            <h3>Ростех</h3>
+            <p>Промышленная корпорация
+            </p>
+        </div>
+        <div class="card">
+            <img src="./images/png/8.png" alt="">
+            <h3>Банк ВТБ</h3>
+            <p>Коммерческий банк 
+            </p>
+        </div>
+    </section>
+</div>
 </body>
 </html>
