--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fjalla+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="gif">
+        <img src="https://assets-v2.lottiefiles.com/a/91cc0ece-1150-11ee-b7cb-d3afb5c0c001/QNF78Uk4YE.gif" alt="">
+    </div>
+
     <div class="container">
     <header class="header">
         <div class="header-wrapper">
@@ -184,5 +188,6 @@
         </div>
     </section>
 </div>
+<script src="./app.js"></script>
 </body>
 </html>
